Package_Tools/include-C/llvm-c-20/llvm-c/in_arbeit/h/ExecutionEngine.h

/**
 * @defgroup LLVMCExecutionEngine Execution Engine
 * @ingroup LLVMC
 *
 * @{
 */

void LLVMLinkInMCJIT(void);
typedef struct LLVMOpaqueExecutionEngine *LLVMExecutionEngineRef;
/*===-- Operations on execution engines -----------------------------------===*/

LLVMBool LLVMCreateExecutionEngineForModule(LLVMExecutionEngineRef *OutEE,
                                            LLVMModuleRef M,
                                            char **OutError);
void LLVMDisposeExecutionEngine(LLVMExecutionEngineRef EE);
uint64_t LLVMGetFunctionAddress(LLVMExecutionEngineRef EE, const char *Name);